caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_provides.caffeine
Blueprints
  * "test":
    Requires { env: String }
